<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.android.chatmessenger.chatmessenger.activity.LoginActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/hint_name_login"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/DDI_Login"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editText3"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/DDD_login"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@+id/editText2"
        app:layout_constraintRight_toLeftOf="@+id/editText4"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/editText4"
        app:layout_constraintTop_toTopOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="994016635"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/butao_cadastrar_login"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginBottom="92dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.585" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description_Logo"
        app:srcCompat="@drawable/logochatapp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        android:layout_marginTop="34dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />
</android.support.constraint.ConstraintLayout>
